Fixed layout issues, particularly with images. Made the game list a <ul>.

--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,7 @@
 html {
   font-size: .8rem;
 }
+
+li { 
+  list-style-type: none;
+}
